proper debug assertions + macro convention

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,22 +4,23 @@ project(smgl VERSION 1.0 DESCRIPTION "SIMD 3D Maths Library")
 
 add_library(
   smgl
-  source/smgl/vectorf.c
   source/smgl/camera.c
   source/smgl/matrix_vector_op.c
   source/smgl/matrices.c
   source/smgl/quaternions.c
+  source/smgl/vectori.c
   )
 
+IF(CMAKE_BUILD_TYPE EQUAL "Debug")
+  add_compile_definitions(SMGL_DEBUG)
 
 IF(MSVC)
   add_definitions(/arch:AVX2)
-  IF(CMAKE_BUILD_TYPE EQUAL "RELEASE")
-    add_definitions(/O2)
-  ENDIF()
+  add_definitions(/O2)
 ELSE(MSVC)
-  add_definitions(-O3)
   add_definitions(-msse4.2)
+  add_definitions(-O2)
+  add_definitions(march=native)
 ENDIF(MSVC)
 
 target_include_directories(smgl PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/source")
